# Highgarden

./: ROADMAP.md  package.json
.claude/: settings.local.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/download/: manager.rs  mod.rs
src-tauri/src/gacha/: auth.rs  manager.rs  mod.rs
src-tauri/src/game/: hypergryph.rs  manager.rs  mod.rs
src/lib/components/layout/: Sidebar.svelte  TitleBar.svelte
src/lib/stores/: downloads.ts  games.ts  settings.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/download/: +page.svelte
src/routes/gacha/: +page.svelte
src/routes/settings/: +page.svelte
