[package]
name = "highgarden"
version = "0.1.0"
description = "Highgarden - Hypergryph Games Launcher"
authors = ["Ns2Kracy"]
edition = "2021"

[lib]
name = "highgarden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.31"
log = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
rust_xlsxwriter = { version = "0.83", default-features = false }
